@@ -57,7 +57,7 @@ is_perl_recent();
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
 
-WriteMakefile
+my(%params) =
 (
 	($] ge '5.005') ?
 	(
@@ -109,3 +109,32 @@ WriteMakefile
 	},
 	VERSION_FROM => 'lib/GraphViz2/Marpa/PathUtils.pm',
 );
+
+if ( ($ExtUtils::MakeMaker::VERSION =~ /^\d\.\d\d$/) && ($ExtUtils::MakeMaker::VERSION > 6.30) )
+{
+	$params{LICENSE} = 'artistic_2';
+}
+
+if ($ExtUtils::MakeMaker::VERSION ge '6.46')
+{
+	$params{META_MERGE} =
+	{
+		'meta-spec' =>
+		{
+			version => 2,
+		},
+		resources   =>
+		{
+			bugtracker => 'https://rt.cpan.org/Public/Dist/Display.html?Name=GraphViz2-Marpa-PathUtils',
+			license    => 'http://opensource.org/licenses/Artistic-2.0',
+			repository =>
+			{
+				type => 'git',
+				url  => 'https://github.com/ronsavage/GraphViz2-Marpa-PathUtils.git',
+				web  => 'https://github.com/ronsavage/GraphViz2-Marpa-PathUtils',
+			},
+		},
+	};
+}
+
+WriteMakefile(%params);
